Fixed mobile-night layout bug, changed chart-label colors

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -146,7 +146,7 @@
         display: none;
     }
 
-    #sepline{
+    .sepline{
         max-height: 400px;
         height: auto;
         width: auto;
